overflow issue fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -309,10 +309,12 @@ footer {
 /* ------------------------------------------- */
 /* ------------------------------------------- */
 
-@media only screen and (max-width: 688px) {
+@media only screen and (max-width: 922px) {
   .container {
     width: 100%;
   }
+
+  /* Header */
   .header-content {
     display: flex;
     flex-direction: column;
@@ -336,17 +338,20 @@ footer {
     height: 259.17px;
     margin: 50px 0px 60px 0;
   }
+
+  /* Players */
   .players-list {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     row-gap: 27px;
-    /* place-items: center; */
+    column-gap: 27px;
   }
 
   .player-name {
     font-size: 28px;
   }
 
+  /* Highlights */
   .highlights-section {
     margin: 60px 0 60px 0;
   }
@@ -359,32 +364,60 @@ footer {
   .highlights-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .highlights-intro {
     margin-bottom: 29px;
     margin-right: 0;
-    padding: 16px;
   }
-  
-  /* .highlights-details {
-      width: 100%;
-  } */
-  
-  /* .highlights-details {
-    margin: 8px 0 24px 0;
-    width: 404px;
-    height: 113px;
-  } */
 
   .highlights-img img {
-    width: 328px;
+    width: 428px;
     height: 248px;
   }
 
+  .highlights-details {
+    margin: 8px 0 24px 0;
+    width: 700px;
+    height: 113px;
+  }
+
+  /* Gallery */
   .gallery-title {
     font-size: 30px;
     line-height: 40px;
+  }
+
+  .gallery-img-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+  }
+
+  /* Signup */
+  .signup-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+
+  .signup-content {
+    padding: 16px;
+  }
+
+  /* Footer */
+  .footer-logo img {
+    width: 275px;
+    height: 60px;
+  }
+}
+
+@media only screen and (max-width: 688px) {
+  .players-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 27px;
   }
 
   .gallery-img-grid {
@@ -393,17 +426,14 @@ footer {
     place-items: center;
   }
 
-  .signup-title {
-    font-size: 30px;
-    line-height: 40px;
-  }
-  
-  .signup-content {
-      padding: 16px;
+  .highlights-img img {
+    width: 428px;
+    height: 248px;
   }
 
-  .footer-logo img {
-    width: 275px;
-    height: 60px;
+  .highlights-details {
+    margin: 8px 0 24px 0;
+    width: 400px;
+    height: 113px;
   }
 }
